# compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ast.ts  binary-operator.ts  keywords.ts  lexer.ts  main.ts  operators.ts  package-lock.json  parser.ts  token.ts  tsconfig.json
.github/workflows/: c-cpp.yml
ast/: BinaryOperation.ts  IntegerLiteral.ts  Kind.ts  Node.ts  base.ts  binary-operation.ts  integer-literal.ts  kind.ts  parenthesis.ts
ast/nodes/: binary-operation.ts  global-scope.ts  integer-literal.ts  paren-expr.ts  string-literal.ts  unary-operation.ts  variable-decl.ts
examples/: file.txt  future.txt  rules.txt
include/ADT/: PointerIntPair.h  SmallArrayMap.h  SmallMap.h  StringMap.h  SymbolTable.h  UnorderedStringMap.h
include/AST/: ArraySubscriptExpr.h  BinaryOperation.h  CallExpr.h  CaptureAllByRefExpr.h  CaptureAllByValueExpr.h  CastExpr.h  CharLiteral.h  CommaSepStmtList.h  CompoundStmt.h  Context.h  Decl.h  DeclRefExpr.h  DerefExpr.h  DotIdentifierExpr.h  Expr.h  ExprKind.h  FieldExpr.h  FloatLiteral.h  ForStmt.h  FunctionCall.h  FunctionDecl.h  FunctionProtoype.h  Handle.h  IfExpr.h  IfStmt.h  IntegerLiteral.h  Linkage.h  NodeKind.h  NumberLiteral.h  OptionalExpr.h  OptionalUnwrapExpr.h  ParamDecl.h  ParenExpr.h  PointerExpr.h  Qualifiers.h  ReturnStmt.h  Stmt.h  StringLiteral.h  TypeRef.h  UnaryOperation.h  (+3 more)
include/AST/Decls/: ArrayBindingParamVarDecl.h  ArrayBindingVarDecl.h  ArrayDecl.h  ArrayDestructredVarDecl.h  ArrowFunctionDecl.h  Base.h  ClosureDecl.h  DeclStmt.h  EnumDecl.h  EnumMemberDecl.h  FieldDecl.h  FunctionDecl.h  InlineArrayParamVarDecl.h  InterfaceDecl.h  LambdaDecl.h  LvalueNamedDecl.h  LvalueTypedDecl.h  NamedDecl.h  ObjectBindingParamVarDecl.h  ObjectBindingVarDecl.h  ObjectDestructuredVarDecl.h  OptionalFieldDecl.h  ParamVarDecl.h  ShapeDecl.h  StructDecl.h  TupleDecl.h  UnionDecl.h  ValueDecl.h  VarDecl.h
include/AST/Types/: ArrayPointerType.h  ArrayType.h  FunctionType.h  OptionalType.h  PointerType.h
include/Backend/LLVM/: Codegen.h  CreateObjectFile.h  Handler.h  JIT.h  Vars.h
include/Basic/: ANSI.h  ArgvLexer.h  Casting.h  ErrorOr.h  Lexer.h  Macros.h  SourceLocation.h  SourceManager.h  StringHash.h
include/Diag/: Consumer.h  Message.h
include/Interface/: ANSI.h  DiagnosticsEngine.h  Repl.h  TerminalKind.h
include/Lex/: Infos.h  Keyword.h  Token.h  TokenBuffer.h  TokenKind.h  TokenStream.h  Tokenizer.h
include/Misc/: Repl.h  Utils.h
include/Parse/: Context.h  Number.h  Operator.h  OperatorPrecedence.h  ParseDecl.h  ParseError.h  ParseExpr.h  ParseIfExpr.h  ParseMisc.h  ParseNumber.h  ParseStmt.h  ParseString.h  ParseUnit.h  Parser.h  String.h
include/Sema/: InlinePolicy.h  Scope.h  SymbolTable.h
include/Sema/Types/: Builtin.h  FunctionProtoype.h  Kind.h  Pointer.h  PointerQualifiers.h  Qualified.h  QualifiedTable.h  Qualifiers.h  Struct.h  Type.h
include/Source/: SourceBuffer.h  SourceLocation.h
src/: main.cpp
src/ADT/: SymbolTable.cpp
src/AST/: BinaryOperation.cpp  CharLiteral.cpp  CompoundStmt.cpp  Context.cpp  FunctionCall.cpp  FunctionDecl.cpp  FunctionPrototype.cpp  IfStmt.cpp  IntegerLiteral.cpp  NumberLiteral.cpp  ParenExpr.cpp  ReturnStmt.cpp  StringLiteral.cpp  UnaryOperation.cpp  VarDecl.cpp  VariableRef.cpp
src/Backend/LLVM/: Codegen.cpp  CreateObjectFile.cpp  Handler.cpp  JIT.cpp  Vars.cpp
src/Basic/: SourceManager.cpp
src/Interface/: DiagnosticsEngine.cpp  Repl.cpp  TerminalKind.cpp
src/Lex/: TokenBuffer.cpp  TokenStream.cpp  Tokenizer.cpp
src/Misc/: Repl.cpp
src/Parse/: Number.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseMisc.cpp  ParseNumber.cpp  ParseStmt.cpp  ParseString.cpp  ParseUnit.cpp  Parser.cpp  String.cpp
src/Sema/: Scope.cpp  SymbolTable.cpp
src/Sema/Types/: QualifiedTable.cpp
src/Source/: SourceBuffer.cpp
stack/: stack.ts
